crates/broza-cli/tests/snapshots/scan_explain__explain_a_category_short_matches_its_snapshot.snap
---
source: crates/broza-cli/tests/scan_explain.rs
expression: "stdout_of(&[\"explain\", \"cloud-synced\", \"--short\"])"
---
cloud-synced  ·  INFO ONLY  ·  Files already synced to iCloud Drive, Dropbox, OneDrive or Google Drive. Reported only, never deleted.
