crates/broza-cli/tests/snapshots/scan_explain__explain_a_volume_matches_its_snapshot.snap
---
source: crates/broza-cli/tests/scan_explain.rs
expression: "stdout_of(&[\"explain\", \"disk3s5\"])"
---
Data   ·   APFS role: Data   ·   409.4 GB

What it is:
  The mutable data volume of macOS. It holds /Users, the applications you
  install, your user libraries and caches. It is joined to the system volume
  through "firmlinks", which is why Finder shows a single disk.

What it is for:
  This is where practically everything that belongs to you lives. Around 99%
  of what Broza can help you clean is here.

Is it safe to touch?
  Yes, with judgement. It is not a system volume. Broza never modifies the
  System, Preboot, Recovery or VM volumes.
