crates/broza-cli/tests/snapshots/scan_explain__scan_json_matches_the_envelope_snapshot.snap
---
source: crates/broza-cli/tests/scan_explain.rs
expression: "json_of(&[\"scan\", \"--json\"])"
---
{
  "broza_version": "[version]",
  "command": "scan",
  "data": {
    "disks": [
      {
        "containers": [
          {
            "free_bytes": 504479744,
            "id": "disk1",
            "purgeable_bytes": 0,
            "size_bytes": 524288000,
            "type": "apfs",
            "used_bytes": 19808256,
            "volumes": [
              {
                "id": "disk1s1",
                "mount_point": "/System/Volumes/iSCPreboot",
                "name": "iSCPreboot",
                "purpose": "Boot loader data that macOS needs before the system volume is available.",
                "role": "preboot",
                "used_bytes": 5877760,
                "uuid": "00000003-1111-4222-8333-000000000003",
                "writable_by_broza": false
              },
              {
                "id": "disk1s2",
                "mount_point": "/System/Volumes/xarts",
                "name": "xART",
                "purpose": "Secure counters used by the Secure Enclave to detect rollback attacks.",
                "role": "unknown",
                "used_bytes": 6311936,
                "uuid": "00000004-1111-4222-8333-000000000004",
                "writable_by_broza": false
              },
              {
                "id": "disk1s3",
                "mount_point": "/System/Volumes/Hardware",
                "name": "Hardware",
                "purpose": "Hardware-specific data written by the firmware of this Mac.",
                "role": "unknown",
                "used_bytes": 2641920,
                "uuid": "00000005-1111-4222-8333-000000000005",
                "writable_by_broza": false
              },
              {
                "id": "disk1s4",
                "name": "Recovery",
                "purpose": "The recovery environment used to repair or reinstall macOS.",
                "role": "recovery",
                "used_bytes": 20480,
                "uuid": "00000006-1111-4222-8333-000000000006",
                "writable_by_broza": false
              }
            ]
          },
          {
            "free_bytes": 3049013248,
            "id": "disk2",
            "purgeable_bytes": 0,
            "size_bytes": 5368664064,
            "type": "apfs",
            "used_bytes": 2319650816,
            "volumes": [
              {
                "id": "disk2s1",
                "mount_point": "/System/Volumes/Update/SFR/mnt1",
                "name": "Recovery",
                "purpose": "The recovery environment used to repair or reinstall macOS.",
                "role": "recovery",
                "used_bytes": 2297442304,
                "uuid": "00000009-1111-4222-8333-000000000009",
                "writable_by_broza": false
              },
              {
                "id": "disk2s2",
                "name": "Update",
                "purpose": "Staging area for macOS updates, written and cleared by the installer.",
                "role": "unknown",
                "used_bytes": 2461696,
                "uuid": "0000000A-1111-4222-8333-00000000000A",
                "writable_by_broza": false
              }
            ]
          },
          {
            "free_bytes": 39848054784,
            "id": "disk3",
            "purgeable_bytes": 2400000000,
            "size_bytes": 494384795648,
            "type": "apfs",
            "used_bytes": 454536740864,
            "volumes": [
              {
                "id": "disk3s1",
                "mount_point": "/",
                "name": "Macintosh HD",
                "purpose": "Read-only, sealed and signed operating system volume (SSV).",
                "role": "system",
                "used_bytes": 17116610560,
                "uuid": "0000000D-1111-4222-8333-00000000000D",
                "writable_by_broza": false
              },
              {
                "id": "disk3s2",
                "mount_point": "/System/Volumes/Preboot",
                "name": "Preboot",
                "purpose": "Boot loader data that macOS needs before the system volume is available.",
                "role": "preboot",
                "used_bytes": 17999499264,
                "uuid": "0000000E-1111-4222-8333-00000000000E",
                "writable_by_broza": false
              },
              {
                "id": "disk3s3",
                "name": "Recovery",
                "purpose": "The recovery environment used to repair or reinstall macOS.",
                "role": "recovery",
                "used_bytes": 2593611776,
                "uuid": "0000000F-1111-4222-8333-00000000000F",
                "writable_by_broza": false
              },
              {
                "id": "disk3s4",
                "mount_point": "/System/Volumes/Update",
                "name": "Update",
                "purpose": "Staging area for macOS updates, written and cleared by the installer.",
                "role": "unknown",
                "used_bytes": 801103872,
                "uuid": "00000010-1111-4222-8333-000000000010",
                "writable_by_broza": false
              },
              {
                "id": "disk3s5",
                "mount_point": "/System/Volumes/Data",
                "name": "Data",
                "purpose": "The writable volume that holds your home folder, your applications and your settings.",
                "role": "data",
                "used_bytes": 409422745600,
                "uuid": "00000011-1111-4222-8333-000000000011",
                "writable_by_broza": true
              },
              {
                "id": "disk3s6",
                "mount_point": "/System/Volumes/VM",
                "name": "VM",
                "purpose": "Virtual memory: the swap and sleep-image files macOS writes and manages on its own.",
                "role": "vm",
                "used_bytes": 6442795008,
                "uuid": "00000012-1111-4222-8333-000000000012",
                "writable_by_broza": false
              }
            ]
          }
        ],
        "id": "disk0",
        "internal": true,
        "model": "APPLE SSD AP0512Z",
        "size_bytes": 500277792768
      },
      {
        "containers": [
          {
            "free_bytes": 2772992,
            "id": "disk4s1",
            "purgeable_bytes": 0,
            "size_bytes": 1878605824,
            "type": "hfs_plus",
            "used_bytes": 1875832832,
            "volumes": [
              {
                "id": "disk4s1",
                "mount_point": "/Volumes/Kiro CLI",
                "name": "Kiro CLI",
                "purpose": "A volume with a role Broza does not recognise, so it is treated as read-only.",
                "role": "unknown",
                "used_bytes": 1875832832,
                "uuid": "00000019-1111-4222-8333-000000000019",
                "writable_by_broza": false
              }
            ]
          }
        ],
        "id": "disk4",
        "internal": false,
        "model": "Disk Image",
        "size_bytes": 2012860928
      },
      {
        "containers": [
          {
            "free_bytes": 179290112,
            "id": "disk5s2",
            "purgeable_bytes": 0,
            "size_bytes": 2484035584,
            "type": "hfs_plus",
            "used_bytes": 2304745472,
            "volumes": [
              {
                "id": "disk5s2",
                "mount_point": "/private/var/folders/dd/bb00000000000000000000000000gn/T/com.docker.install/DockerDesktop-238018",
                "name": "Docker",
                "purpose": "A volume with a role Broza does not recognise, so it is treated as read-only.",
                "role": "unknown",
                "used_bytes": 2304745472,
                "uuid": "0000001B-1111-4222-8333-00000000001B",
                "writable_by_broza": false
              }
            ]
          }
        ],
        "id": "disk5",
        "internal": false,
        "model": "Disk Image",
        "size_bytes": 2828009472
      },
      {
        "containers": [
          {
            "free_bytes": 2772992,
            "id": "disk6s1",
            "purgeable_bytes": 0,
            "size_bytes": 1260167168,
            "type": "hfs_plus",
            "used_bytes": 1257394176,
            "volumes": [
              {
                "id": "disk6s1",
                "mount_point": "/Volumes/Kiro CLI 1",
                "name": "Kiro CLI",
                "purpose": "A volume with a role Broza does not recognise, so it is treated as read-only.",
                "role": "unknown",
                "used_bytes": 1257394176,
                "uuid": "0000001D-1111-4222-8333-00000000001D",
                "writable_by_broza": false
              }
            ]
          }
        ],
        "id": "disk6",
        "internal": false,
        "model": "Disk Image",
        "size_bytes": 1394423808
      },
      {
        "containers": [
          {
            "free_bytes": 2752512,
            "id": "disk7s1",
            "purgeable_bytes": 0,
            "size_bytes": 1121935360,
            "type": "hfs_plus",
            "used_bytes": 1119182848,
            "volumes": [
              {
                "id": "disk7s1",
                "mount_point": "/Volumes/Kiro CLI 2",
                "name": "Kiro CLI",
                "purpose": "A volume with a role Broza does not recognise, so it is treated as read-only.",
                "role": "unknown",
                "used_bytes": 1119182848,
                "uuid": "0000001F-1111-4222-8333-00000000001F",
                "writable_by_broza": false
              }
            ]
          }
        ],
        "id": "disk7",
        "internal": false,
        "model": "Disk Image",
        "size_bytes": 1256192512
      },
      {
        "containers": [
          {
            "free_bytes": 2785280,
            "id": "disk8s1",
            "purgeable_bytes": 0,
            "size_bytes": 1123201024,
            "type": "hfs_plus",
            "used_bytes": 1120415744,
            "volumes": [
              {
                "id": "disk8s1",
                "mount_point": "/Volumes/Kiro CLI 3",
                "name": "Kiro CLI",
                "purpose": "A volume with a role Broza does not recognise, so it is treated as read-only.",
                "role": "unknown",
                "used_bytes": 1120415744,
                "uuid": "00000021-1111-4222-8333-000000000021",
                "writable_by_broza": false
              }
            ]
          }
        ],
        "id": "disk8",
        "internal": false,
        "model": "Disk Image",
        "size_bytes": 1257459712
      }
    ],
    "largest_items": [
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/Library/Developer/Xcode/DerivedData/App/Build/app.o",
        "size_bytes": 212400001024,
        "volume_id": "disk3s5"
      },
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/Library/Caches/com.example.app/cache.db",
        "size_bytes": 84100001792,
        "volume_id": "disk3s5"
      },
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/Documents/thesis.pdf",
        "size_bytes": 61700001792,
        "volume_id": "disk3s5"
      },
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/Library/Containers/com.docker.docker/Data/vms/0/data/Docker.raw",
        "size_bytes": 38600003584,
        "volume_id": "disk3s5"
      },
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/code/old-site/node_modules/left-pad/index.js",
        "size_bytes": 27200000000,
        "volume_id": "disk3s5"
      },
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/Movies/holiday-2019.mov",
        "size_bytes": 4200001536,
        "volume_id": "disk3s5"
      },
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/.Trash/old-disk-image.dmg",
        "size_bytes": 3300003840,
        "volume_id": "disk3s5"
      },
      {
        "kind": "file",
        "path": "/System/Volumes/Data/Users/dana/Library/Logs/App/app.log",
        "size_bytes": 1200001024,
        "volume_id": "disk3s5"
      }
    ]
  },
  "errors": [],
  "generated_at": "[rfc3339]",
  "host": {
    "arch": "arm64",
    "macos_version": "26.1"
  },
  "schema_version": "1.1",
  "warnings": [
    {
      "code": "size_exceeds_volume",
      "message": "Data measures 432700014592 bytes but macOS reports 409422745600 in use on the volume. Each APFS clone is counted separately, so the sizes listed are upper bounds until clone accounting lands; the volume figure also includes snapshots and metadata a walk never sees.",
      "path": "/System/Volumes/Data"
    }
  ]
}
