crates/broza-cli/tests/snapshots/scan_explain__suggest_json_matches_its_snapshot.snap
---
source: crates/broza-cli/tests/scan_explain.rs
expression: envelope
---
{
  "broza_version": "[version]",
  "command": "suggest",
  "data": {
    "by_risk": {
      "amber": 30500003840,
      "green": 297700003840,
      "red": 0
    },
    "findings": [
      {
        "action": "quarantine",
        "actionable": true,
        "category": "user-cache",
        "description": "Caches applications rebuild on demand; removing them costs a slower first launch.",
        "id": "user-cache.library-caches",
        "item_count": 1,
        "paths": [
          {
            "last_used": "[time]",
            "path": "/System/Volumes/Data/Users/dana/Library/Caches/com.example.app",
            "size_bytes": 84100001792
          }
        ],
        "reasoning": "Everything under /System/Volumes/Data/Users/dana/Library/Caches is regenerated by the application that owns it.",
        "reclaimable_bytes": 84100001792,
        "risk": "green",
        "title": "Application caches"
      },
      {
        "action": "quarantine",
        "actionable": true,
        "category": "user-cache",
        "description": "Diagnostic logs kept by applications; nothing reads them back except a support engineer.",
        "id": "user-cache.logs",
        "item_count": 1,
        "paths": [
          {
            "last_used": "[time]",
            "path": "/System/Volumes/Data/Users/dana/Library/Logs/App",
            "size_bytes": 1200001024
          }
        ],
        "reasoning": "Everything under /System/Volumes/Data/Users/dana/Library/Logs is regenerated by the application that owns it.",
        "reclaimable_bytes": 1200001024,
        "risk": "green",
        "title": "Application logs"
      },
      {
        "action": "inform_only",
        "actionable": false,
        "category": "build-cache",
        "description": "The virtual disk every Docker image, container and volume lives in.",
        "id": "build-cache.docker-raw",
        "instructions": {
          "provider": "Docker Desktop",
          "steps": [
            "Run `docker system prune` to remove unused images, containers and build cache.",
            "In Docker Desktop, open Settings → Resources → Advanced and lower the disk image size."
          ],
          "summary": "Let Docker reclaim the space it no longer uses."
        },
        "item_count": 1,
        "paths": [
          {
            "last_used": "[time]",
            "path": "/System/Volumes/Data/Users/dana/Library/Containers/com.docker.docker/Data/vms/0/data/Docker.raw",
            "size_bytes": 38600003584
          }
        ],
        "reasoning": "Deleting the file would destroy every container; only Docker can shrink it safely.",
        "reclaimable_bytes": 38600003584,
        "risk": "amber",
        "title": "Docker Desktop disk image"
      },
      {
        "action": "quarantine",
        "actionable": true,
        "category": "build-cache",
        "description": "Dependency trees whose project is gone or has not changed in a long time.",
        "id": "build-cache.orphan-node-modules",
        "item_count": 1,
        "paths": [
          {
            "last_used": "[time]",
            "path": "/System/Volumes/Data/Users/dana/code/old-site/node_modules",
            "size_bytes": 27200000000
          }
        ],
        "reasoning": "Without a package.json beside it nothing can use it; under a project that has not changed since --unused-after, `npm install` brings it back when work resumes.",
        "reclaimable_bytes": 27200000000,
        "risk": "amber",
        "title": "Orphan node_modules"
      },
      {
        "action": "quarantine",
        "actionable": true,
        "category": "build-cache",
        "description": "Build products and indexes Xcode regenerates on the next build.",
        "id": "build-cache.xcode-deriveddata",
        "item_count": 1,
        "paths": [
          {
            "last_used": "[time]",
            "path": "/System/Volumes/Data/Users/dana/Library/Developer/Xcode/DerivedData/App",
            "size_bytes": 212400001024
          }
        ],
        "reasoning": "Xcode rebuilds DerivedData from the sources the next time a project opens.",
        "reclaimable_bytes": 212400001024,
        "risk": "green",
        "title": "Xcode DerivedData"
      },
      {
        "action": "purge",
        "actionable": true,
        "category": "trash",
        "description": "Items you moved to the Trash and have not emptied.",
        "id": "trash.home",
        "item_count": 1,
        "paths": [
          {
            "last_used": "[time]",
            "path": "/System/Volumes/Data/Users/dana/.Trash/old-disk-image.dmg",
            "size_bytes": 3300003840
          }
        ],
        "reasoning": "Already thrown away by you; emptying the Trash deletes them for good, with no quarantine.",
        "reclaimable_bytes": 3300003840,
        "risk": "amber",
        "title": "Trash"
      },
      {
        "action": "tmutil_delete",
        "actionable": true,
        "category": "snapshots",
        "description": "APFS copy-on-write snapshots kept locally by Time Machine.",
        "id": "snapshots.timemachine-local",
        "item_count": 1,
        "reasoning": "size not reported by macOS",
        "reclaimable_bytes": 0,
        "risk": "amber",
        "snapshots": [
          {
            "mount_point": "/System/Volumes/Data",
            "name": "com.apple.TimeMachine.2026-09-20-101530.local",
            "purgeable": true,
            "uuid": "00000021-1111-4222-8333-000000000021",
            "volume": "disk3s5"
          }
        ],
        "title": "Time Machine local snapshots"
      }
    ],
    "inform_only_bytes": 38600003584,
    "total_reclaimable_bytes": 328200007680
  },
  "errors": [],
  "generated_at": "[timestamp]",
  "host": {
    "arch": "arm64",
    "macos_version": "26.1"
  },
  "schema_version": "1.1",
  "warnings": []
}
